syntax = "proto3";

package bank;

import "google/type/date.proto";

option go_package = "github.com/MuhAndriansyah/grpc-bank-project/proto/bank/v1;bankv1";

message CurrentBalanceRequest {
    string account_number = 1 [json_name = "account_number"];
}

message CurrentBalanceResponse {
    double amount = 1;
    google.type.Date current_date = 2 [json_name = "current_date"];
}